Info section spacing fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -416,7 +416,7 @@ section.tentoonstellingen {
 }
 
 section.info {
-    padding: 5rem 0.5rem;
+    padding: 2rem 0.5rem;
 
     @media (width > 678px) {
         display: grid;
@@ -435,8 +435,8 @@ section.info {
         position: relative;
         height: max-content;
         display: grid;
-        grid-template-rows: min-content 6.25rem 1fr;
-        margin-top: 1rem;
+        grid-template-rows: min-content max-content 1fr;
+        margin-bottom: 3rem;
 
         @media (width > 678px) {
             margin-top: unset;
@@ -452,6 +452,10 @@ section.info {
             }
         }
 
+        h2 {
+            margin-left: unset;
+        }
+
         img {
             width: 100%;
             height: 354px;
@@ -459,7 +463,6 @@ section.info {
         }
 
         p {
-            margin-left: 0.75rem;
             max-width: 22.25rem;
             margin-block: 1rem;
         }
